# 5.6.0
- fix for changes in the base R function order/sort in R 4.1.0

# 5.5.2
- write intermediate files to temp-directory in `rmarkdown::render()` to fix possible deployment problems with rsconnect when using `report()`
- bugfix in `pram()`
- bugfix in `dRisk()`
- updates when reading foreign-file formats into `sdcApp()`

# 5.5.1
- bug in modRisk when the levels of a variable in the formulaM is greater than 10 (solved). Thanks to Ying Chen for the solution.
- Adding default comment.char parameter for csv imports (thx @leebrian)

# 5.5.0
- gcc problems solved

# 5.4.1
- nothing new, but shiny did no longer export a specific function, so we resolved a warning

# 5.4.1
- valTable now also works for additive noise methods and swapping
- updates to imports
- small fixes and updates in `sdcApp`

# 5.3.0
- Add versions for Stata export
- add parameter `shiny.server` to `sdcApp` (to make it easily possible to run the app on a shiny server)
- fixes due to new data.table version
- improvements in sdcApp()

# 5.2.0
- improvements in sdcApp()
- updating dependencies due to new version of package car
- bug in IL1 resolved. Now distiction of methods IL1 and IL1s
- also a new gh-page (http://sdctools.github.io/sdcMicro/) was created

# 5.1.0
- bugfix in sdcApp() when using R-objects as data input
- bugfix in sdcApp() when button to perform kAnon() was "lost"
- bugfix in sdcApp() when >= 10 keyvars were used in localSuppression
- bugfix in sdcApp(): sort table of risky observations correctly
- support shiny server for the GUI
- new method kAnon_violations() returning the number of records violating k-anonymity in the sample or the population
- fixes and improvements in parametrisation and error-handling in riskyCells()
- minor fixes in sdc_guidelines vignette including a comment, that the guidelines have not yet been revised for sdcMicro version >= 5.0.0
- pass (...) in writeSafeFile(..., format="csv")
- fixes and improvements in localSuppression()

# 5.0.4