@@ -3,6 +3,8 @@
 S3method(plot,localSuppression)
 S3method(plot,sdcMicroObj)
 S3method(print,freqCalc)
+S3method(print,il_correl)
+S3method(print,il_variables)
 S3method(print,indivRisk)
 S3method(print,ldiversity)
 S3method(print,localSuppression)
@@ -15,6 +17,8 @@ S3method(summary,freqCalc)
 S3method(summary,micro)
 S3method(summary,pram)
 export("strataVar<-")
+export(IL_correl)
+export(IL_variables)
 export(LocalRecProg)
 export(addGhostVars)
 export(addNoise)
